--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,3 @@
-[tool.poetry]
-name = "example_template"
-version = "0.1.0"
-description = "This is a template example for python packages"
-authors = ["sungcheol <sungcheol.kim78@gmail.com>"]
-
-[tool.poetry.dependencies]
-python = "^3.8"
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.3"
-pytest = "^7.4.2"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
 [tool.black]
 line-length = 88
 target-version = ["py38"]
@@ -36,7 +19,7 @@ exclude = '''
 '''
 
 [tool.isort]
-py_version = "38"
+py_version = "312"
 line_length = 80
 lines_after_imports = 2
 lines_between_sections = 1
@@ -56,4 +39,49 @@ minversion = "6.1"
 addopts = "--cov"
 testpaths = [
     "tests_unit",
+]
+
+[tool.ruff]
+target-version = "py312"
+line-length = 88
+lint.select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+]
+lint.ignore = [
+    "E501",  # line too long, handled by black
+    "B008",  # do not perform function calls in argument defaults
+    "C901",  # too complex
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+
+[tool.ruff.isort]
+known-first-party = ["src"]
+
+
+[project]
+name = "dialog_summarizer"
+version = "0.0.1"
+requires-python = ">=3.12"
+dependencies = [
+    "dotenv>=0.9.9",
+    "ipython>=9.6.0",
+    "langchain>=0.3.27",
+    "langchain-anthropic>=0.3.22",
+    "langgraph>=1.0.0rc1",
+]
+
+[project.optional-dependencies]
+dev = [
+    "ruff>=0.8.0",
 ]
